[gd_scene load_steps=4 format=3 uid="uid://c6p4nvnygmjy0"]

[ext_resource type="Script" uid="uid://bblyowc0dscno" path="res://projectile.gd" id="1_xhb7t"]
[ext_resource type="Texture2D" uid="uid://7k2hxk6cxyyw" path="res://tile/damagable/buildable/defence/ball.png" id="2_66uq1"]

[sub_resource type="CircleShape2D" id="CircleShape2D_roj1f"]

[node name="Projectile" type="CharacterBody2D"]
z_index = 999
collision_layer = 4
collision_mask = 4
script = ExtResource("1_xhb7t")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_66uq1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_roj1f")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_roj1f")

[node name="Lifetime" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="Lifetime" to="." method="_on_lifetime_timeout"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
